# flask-admin-panel

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
flask_admin_panel.egg-info/: PKG-INFO  SOURCES.txt
src/flask_admin_panel.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt
src/flask_admin_panel/controllers/: admin_panel_controller.py
src/flask_admin_panel/middlewares/: auth_utils.py
src/flask_admin_panel/services/: admin_panel_service.py
src/flask_admin_panel/templates/flask_admin_panel/: index.html  list.html
src/flask_admin_panel/tests/controllers/: test_admin_panel_controllers.py
src/flask_admin_panel/tests/services/: test_admin_panel_service.py
