[project]
name = "flask-admin-panel"
version = "0.0.1"
authors = [
  { name="Pranjal Gharat", email="pranjgit@gmail.com" },
]
description = "Simple Admin Panel for Flask"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"